@@ -1,5 +1,7 @@
 2020/??/??, 1.2.1 ('Cleaning room') :
     - fpsync: mask broken pipe errors when dequeueing jobs (fixes GH issue #22)
+    - fpart: align get_size() and init_file_entries() behaviour and take
+      exclusions into account when computing a directory size.
 2020/01/10, 1.2.0 ('Joking') :
     - fpsync: ability to set an unlimited number of files or an unlimited size
       per sync job (fixes GH issue #9)
